# aleo-name-service

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: client.rs  command.rs  db.rs  main.rs  utils.rs
frontend/: .gitignore  README.md  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/assets/address/: DynamicAddressIcon.tsx  dynamicAddressIcons.ts
frontend/src/assets/css/: globals.css
frontend/src/assets/icons/: index.tsx
frontend/src/assets/social/: DynamicSocialIcon.tsx
frontend/src/components/: BlockNumber.tsx  CodeBlock.tsx  CoinbaseBanner.tsx  WalletListItem.tsx  WalletModal.tsx  WalletModalProvider.tsx  WalletMultiButton.tsx  copy_to_clipboard.tsx  record-provider.tsx  stats.tsx
frontend/src/components/faucet/: view.tsx
frontend/src/components/icons/: refresh.tsx
frontend/src/components/modal-views/: container.tsx  context.tsx
frontend/src/components/search/: view.tsx  (+1 more)
frontend/src/config/: env.ts  routes.ts  tlds.ts  tokens.ts
frontend/src/constants/: coinsWithoutIcons.json
frontend/src/context/: private-fee-context.tsx  record-context.tsx  trace-context.tsx
frontend/src/layouts/: _layout-menu.tsx  _layout.tsx
frontend/src/lib/: pinata.ts  rpc.ts  util.ts
frontend/src/pages/: 404.tsx  _app.tsx  _document.tsx  docs.tsx  index.tsx  toolbox.tsx
frontend/src/types/: index.ts
program/: README.md  program.json
program/imports/: credits.leo
program/inputs/: aleo_name_service_v1.in
program/src/: main.leo
(+52 files in other folders)
