[package]
name = "ans-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
snarkvm-console-program = "0.14.4"
snarkvm-console-network = "0.14.4"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
regex = "1.5.4"
urlencoding = "2.1.2"