[package]
name = "ans-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
deadpool-redis = "0.12.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
snarkvm-console-program = "0.16.6"
snarkvm-console-network = "0.16.6"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
regex = "1.5.4"
urlencoding = "2.1.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
